--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     url: jdbc:mysql://119.23.205.106/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true  #打印sql语句
+    jackson:
+      default-property-inclusion: non_null #字段为null,数据不返回前端
 server:
   servlet:
     context-path: /sell
