--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>2.7.0</version>
         </dependency>
 
+        <!--微信支付-->
+        <dependency>
+            <groupId>cn.springboot</groupId>
+            <artifactId>best-pay-sdk</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
         <!--生成自己的配置元数据文件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
