第九次提交

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!--freemaker模板引擎-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
 
     </dependencies>
 
