--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,14 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: Lj586492
-    url: jdbc:mysql://119.23.205.106/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://47.93.61.140/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true  #打印sql语句
     jackson:
       default-property-inclusion: non_null #字段为null,数据不返回前端
+  redis:
+    host: 127.0.0.1
+    port: 6379
 server:
   servlet:
     context-path: /sell
@@ -16,6 +19,8 @@ server:
 wechat: #微信公众号
   mpAppId: wxbc24d6e2305b993b
   mpAppSecret: c0303b692afcf89e5e588b5f75549efe
+  openAppId: wx6ad144e54af67d87
+  openAppSecret: 91a2ff6d38a2bbccfb7e9f9079108e2e
   mchId: 1409146202
   mchKey: c976503d34ca432c601361f969fd8d85
   keyPath: /var/weixin_cert/h5.p12
