--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,6 @@ wechat: #微信公众号
   mchKey: c976503d34ca432c601361f969fd8d85
   keyPath: /var/weixin_cert/h5.p12
   notifyUrl: http://lijing.nat300.top/sell/pay/notify
+  template-id:
+    orderStatus: e-Cqq67QxD6YNI41iRiqawEYdFavW_7pc7LyEMb-yeQ
 
