--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,4 +27,8 @@ wechat: #微信公众号
   notifyUrl: http://lijing.nat300.top/sell/pay/notify
   template-id:
     orderStatus: e-Cqq67QxD6YNI41iRiqawEYdFavW_7pc7LyEMb-yeQ
+logging:
+  level:
+    com.fae.sell.dao.mapper: trace
+
 
